#76: Style fixes
- Simplify layout for map control.
- Now we don't need to reserve space for the footer. The container
  defines a maximum height that is used completely by all its children.

Fixes:
 - mobile facility detail was not covering the whole screen.
 - desktop search results was leaving blank space for the footer even if
   it wasn't present.
 - when listing search results in mobile, if the user started typig an
   empty bottom action was being displayed.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -90,12 +90,10 @@ nav .nav-wrapper {
   top: 12px;
   width: 390px;
   min-width: 318px;
+  max-height: 95%;
   flex-direction: column;
   overflow: hidden;
   z-index: 3;
-  // Redundancy for fallback
-  max-height: 96%;
-  max-height: calc(100% - 24px);
 
   .preloader-wrapper {
     margin: 40px auto;
@@ -217,11 +215,6 @@ nav .nav-wrapper {
 .search-box {
   width: 100%;
   padding: 5px 10px 0 10px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
   -webkit-box-flex-wrap: wrap;
   -moz-box-flex-wrap: wrap;
   -ms-flex-flex-wrap: wrap;
@@ -279,7 +272,6 @@ input[type="checkbox"]:checked + label:before {
 }
 
 .content {
-  max-height: 74vh;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -342,10 +334,11 @@ input[type="checkbox"]:checked + label:before {
     max-height: 100%;
 
     .content {
-      // There needs to be space for footer and header height
-      min-height: 70vh;
-      min-height: calc(100% - 72px - 55px - 50px);
       overflow-y: scroll;
+
+      &.expand {
+        height: 100vh;
+      }
     }
   }
 
